@startuml academics
!theme plain
title 3. Academic Management System

' Stub for Users table (fully defined in "Core User & Role Management")
class Users <<(U,#ADD1B2)>> {
  + id: INT {PK}
  role: ENUM
}

class Homework {
  + id: INT {PK}
  teacher_id: INT {FK}
  --
  title: VARCHAR(255)
  description: TEXT
  due_date: DATE
  attachment_path: VARCHAR(255)
  subject: VARCHAR(255)
  total_questions: INT
  created_at: TIMESTAMP
}

class Homework_Students {
  + homework_id: INT {PK} {FK}
  + student_id: INT {PK} {FK}
}

class Submitted_Homework {
  + id: INT {PK}
  homework_id: INT {FK}
  student_id: INT {FK}
  --
  submission_content: TEXT
  submission_date: TIMESTAMP
  submission_attachment: VARCHAR(255)
  status: ENUM('pending', 'reviewed', 'rejected')
  correct_answers: INT
  percentage: DECIMAL(5,2)
  feedback: TEXT
  corrected_submission: TEXT
}

class Assessments {
  + id: INT {PK}
  teacher_id: INT {FK}
  --
  title: VARCHAR(255)
  description: TEXT
  due_date: DATE
  attachment: VARCHAR(255)
  subject: VARCHAR(255)
  created_at: TIMESTAMP
}

class Assessment_Students {
  + assessment_id: INT {PK} {FK}
  + student_id: INT {PK} {FK}
}

class Submitted_Assessments {
  + id: INT {PK}
  assessment_id: INT {FK}
  student_id: INT {FK}
  --
  submission_content: TEXT
  submission_date: TIMESTAMP
  submission_attachment: VARCHAR(255)
  status: ENUM('pending', 'reviewed', 'rejected')
  grade: VARCHAR(10)
  feedback: TEXT
}

class Grades {
  + id: INT {PK}
  student_id: INT {FK}
  teacher_id: INT {FK}
  --
  subject: VARCHAR(100)
  grade: DECIMAL(5,2)
  feedback: TEXT
  created_at: TIMESTAMP
}

class Attendance {
  + id: INT {PK}
  student_id: INT {FK}
  recorded_by: INT {FK}
  --
  date: DATE
  status: ENUM('present', 'absent', 'excused')
  created_at: TIMESTAMP
}

' Relationships for academic management
Users "1" -- "M" Homework : teacher_id (via Users.id with role 'teacher')
Homework "1" -- "M" Homework_Students : homework_id
Users "1" -- "M" Homework_Students : student_id (via Users.id with role 'student')
Homework "1" -- "M" Submitted_Homework : homework_id
Users "1" -- "M" Submitted_Homework : student_id (via Users.id with role 'student')

Users "1" -- "M" Assessments : teacher_id (via Users.id with role 'teacher')
Assessments "1" -- "M" Assessment_Students : assessment_id
Users "1" -- "M" Assessment_Students : student_id (via Users.id with role 'student')
Assessments "1" -- "M" Submitted_Assessments : assessment_id
Users "1" -- "M" Submitted_Assessments : student_id (via Users.id with role 'student')

Users "1" -- "M" Grades : student_id (via Users.id with role 'student')
Users "1" -- "M" Grades : teacher_id (via Users.id with role 'teacher')
Users "1" -- "M" Attendance : student_id (via Users.id with role 'student')
Users "1" -- "M" Attendance : recorded_by (via Users.id with role 'teacher')

note "Users table represents the central user identity, detailed in '1. Core User & Role Management'." as N1
N1 .. Users

@enduml